syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;


message SumRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumResponse {
    int32 sum_res = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double avg = 1;
}

message FindMaxRequest {
    int32 number = 1;
}

message FindMaxResponse {
    int32 maximum = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double square_root = 1;
}
service CalculatorService {
    rpc sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    rpc FindMax (stream FindMaxRequest) returns (stream FindMaxResponse) {};

    // This will throw an error if the number sent is negative
    // The error sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}